tests/negative/neg_string_mutable_object.safe
-- Test: neg_string_mutable_object
-- Description: Mutable String objects remain outside the PR11.2 text subset.
-- Expected: REJECT unsupported_source_construct

package Neg_String_Mutable_Object

   Name : String = "hello";


